# TraceForge

./: .gitignore  AGENTS.md  LONG_TERM_PLAN.md  README.md  jac.toml  main.jac  pyproject.toml
demo_runs/: README.md
demo_runs/starter_batch/: oscillation_loop.traj.json  successful_recovery.traj.json
docs/cli/: agent_workflows.md  command_reference.md  demo_playbook.md  output_schema.md  provider_setup.md  quickstart.md  repo_handoff_prompts.md  troubleshooting.md  validation_notes.md
docs/plans/: JAC_ONLY_COMPLETION_PLAN.md  NEXT_STEPS_COMPLETION_PLAN.md  SHORT_TERM_PLAN.md  SWE_AGENT_EVAL_PLAN.md
docs/submission/: demo_script.md  devpost_outline.md  final_checklist.md  judging_notes.md
py/: __init__.py  features.py  parser.py  similarity.py  utils.py
scripts/: bootstrap  traceforge  validate_gold_annotations  validate_gold_annotations.jac  validate_gold_annotations.py
tests/: README.md  smoke.jac
tests/fixtures/: mini_swe_toolcall.traj.json
traceforge/: __init__.jac  __init__.py  analysis.jac  api.jac  cli.jac  cli.py  clustering.jac  critical.jac  eval.jac  features.jac  graph_build.jac  ingest.jac  llm_ops.jac  parser.jac  provider_config.jac  provider_config.py  provider_llm.jac  reporting.jac  schema.jac  ui.jac
uploads/local_demo_batch/: invalid_patch.traj.json  premature_completion.traj.json
